modules/gdscript/tests/scripts/analyzer/errors/bitwise_float.gd
func test():
	print(2.2 << 4)
	print(2 >> 4.4)
